--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="s.png" alt="">
+                            <img src="p.png" alt="">
                         </div>
                     </div>
                 </div>
