--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         <!-- contact info item start -->
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
-                            <h4>Call Us On</h4>
+                            <h4>Call / Whatsapp</h4>
                             <p>+92 321 9563 431</p>
                         </div>
                         <!-- contact info item End -->
