--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     </div>
                     <div class="row">
                         <div class="portfolio-heading padd-15">
-                            <h2>My Last Projects :</h2>
+                            <h2>My Projects :</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -435,7 +435,7 @@
                         <!-- contact info item End -->
                     </div>
                     <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
-                    <h4 class="contact-sub-title padd-15">I'M VERY RESPOSIVE TO MESSAGES</h4>
+                    <h4 class="contact-sub-title padd-15">I'M VERY RESPONSIVE TO MESSAGES</h4>
                     <!-- contact form -->
                     <div class="row">
                         <div class="contact-form padd-15">
