--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
                                 <div class="icon">
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
-                                <h4>Web Designer</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
+                                <h4>Web Development</h4>
+                                <p>We don’t just build websites, we build websites that SELLS & Convert. Hire web designers and developers</p>
                             </div>
                         </div>
                         <!-- ========= Services item End ========= -->
@@ -268,8 +268,9 @@
                                 <div class="icon">
                                     <i class="fa fa-laptop-code"></i>
                                 </div>
-                                <h4>Graphic Designer</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
+                                <h4>App Development</h4>
+                                <p>Hire mobile app developers to
+scale your business. Cross Platforms apps are really easy to scale.</p>
                             </div>
                         </div>
                         <!-- ========= Services item End ========= -->
@@ -279,8 +280,8 @@
                                 <div class="icon">
                                     <i class="fa fa-palette"></i>
                                 </div>
-                                <h4>Web Developer</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
+                                <h4>UI/UX Design</h4>
+                                <p>Logo Design and branding books which you can use for print media & online Use for your business.</p>
                             </div>
                         </div>
                         <!-- ========= Services item End ========= -->
@@ -290,8 +291,8 @@
                                 <div class="icon">
                                     <i class="fa fa-code"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
+                                <h4>Digital Marketing</h4>
+                                <p>We offer Search Engine Marketing,  Social Media Marketing or Content marketing.</p>
                             </div>
                         </div>
                         <!-- ========= Services item End ========= -->
