--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ scale your business. Cross Platforms apps are really easy to scale.</p>
                                 <div class="icon">
                                     <i class="fa fa-code"></i>
                                 </div>
-                                <h4>Digital Marketing</h4>
+                                <h4>E-commerce</h4>
                                 <p>We offer Search Engine Marketing,  Social Media Marketing or Content marketing.</p>
                             </div>
                         </div>
@@ -302,7 +302,7 @@ scale your business. Cross Platforms apps are really easy to scale.</p>
                                 <div class="icon">
                                     <i class="fa fa-search"></i>
                                 </div>
-                                <h4>Web Design</h4>
+                                <h4>IT & Startups</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
                             </div>
                         </div>
@@ -313,8 +313,8 @@ scale your business. Cross Platforms apps are really easy to scale.</p>
                                 <div class="icon">
                                     <i class="fa fa-bullhorn"></i>
                                 </div>
-                                <h4>Web Design</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil velit ab itaque.</p>
+                                <h4>Digital Marketing</h4>
+                                <p>We offer Search Engine Marketing,  Social Media Marketing or Content marketing.</p>
                             </div>
                         </div>
                         <!-- ========= Services item End ========= -->
